<resources>
    <string name="app_name">GoogleSignIn</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_sign_in_with">or Sign In with</string>
    <string name="user_name_email">User Name/Email</string>
    <string name="login">login</string>
</resources>