<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="times new roman"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"

        >

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_email"
            android:fontFamily="times new roman"
            android:textColor="@color/black"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="times new roman"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            >

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progress"
        >

    </ProgressBar>

    <Button
        android:id="@+id/login"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        >

    </Button>

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="@color/black"
        android:fontFamily="times new roman"
        android:text="@string/forget_password"

        >

    </TextView>





    <ImageView
        android:id="@+id/google"
        android:layout_marginTop="100dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/google"
        >

    </ImageView>

    <TextView
        android:id="@+id/sign_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:fontFamily="times new roman"
        android:text="@string/or_sign_in_with"

        >

    </TextView>

</LinearLayout>